fix wave-contact-section mobile

--- a/src/sass/_responsive.sass
+++ b/src/sass/_responsive.sass
@@ -65,6 +65,12 @@
       height: 76%
       bottom: -4rem
 
+  .wave-contact-section
+    height: 9rem
+    &::after
+      height: 12rem
+      bottom: -2rem
+
   #search-form, #search-button
     display: none
 
